# tai

./: Cargo.toml  LICENSE  README.md
src/: common.rs  config.rs  main.rs  setting.rs
src/utils/: floyd_dither.rs  image_to_ascii.rs  image_to_braille.rs  image_to_onechar.rs  mod.rs
